--- a/CSS/style.css
+++ b/CSS/style.css
@@ -206,12 +206,13 @@ nav .navbar-nav li .campaign {
   left: 25px;
 }
 
-#speakersection2 {
-  row-gap: 120px;
-}
-
 @media screen and (min-width: 768px) {
-  footer {
-    display: none;
+  #speakersection2 {
+    row-gap: 50px;
+  }
+
+  .speakers {
+    width: 100px;
+    height: 180px;
   }
 }
