--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,7 +101,7 @@ body {
 .main-heading {
   color: var(--color-secondary);
   font-family: var(--font-family);
-  font-size: var(--fs-primary);
+  font-size: 1.5em;
   font-weight: var(--fw-primary);
 }
 
