--- a/CSS/style.css
+++ b/CSS/style.css
@@ -170,6 +170,27 @@ nav .navbar-nav li .campaign {
   background-color: white;
 }
 
+.heading-small,
+.heading-big,
+.heading-about {
+  color: var(--color-secondary);
+}
+
+.heading-big,
+.heading-about {
+  font-weight: 90;
+  font-style: normal;
+  font-size: 50px;
+  background: -webkit-linear-gradient(#e0680679, #fc2109);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-stretch: expanded;
+}
+
+.heading-about {
+  font-size: 30px;
+}
+
 .contain {
   min-width: 855px;
 }
@@ -250,7 +271,7 @@ nav .navbar-nav li .campaign {
   left: 25px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   #navbarSupportedContent {
     height: 100vh;
   }
