Revert "Update font size"

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,7 +21,7 @@ body {
   --font-style: normal;
   --fw-primary: 600;
   --fw-secondary: 900;
-  --fs-primary: 1.1em;
+  --fs-primary: 10px;
   --fs-secondary: 16px;
 }
 
